--- a/configs/alacritty.yml
+++ b/configs/alacritty.yml
@@ -1,7 +1,7 @@
 window:
   dimensions:
-    columns: 60
-    lines: 20
+    columns: 80
+    lines: 25
   padding:
     x: 5
     y: 5
@@ -24,23 +24,37 @@ font:
     family: JetBrains Mono
     style: Italic
 
-  size: 11.0
+  size: 9.0
 
-# Colors (Solarized Dark)
 colors:
+  # Default colors
   primary:
-    background: '0x002b36'
-    foreground: '0x839496'
+    # hard contrast: background = '0x1d2021'
+    background: '0x282828'
+    # soft contrast: background = '0x32302f'
+    foreground: '0xebdbb2'
 
+  # Normal colors
   normal:
-    black:   '0x073642'
-    red:     '0xdc322f'
-    green:   '0x859900'
-    yellow:  '0xb58900'
-    blue:    '0x268bd2'
-    magenta: '0xd33682'
-    cyan:    '0x2aa198'
-    white:   '0xeee8d5'
+    black:   '0x282828'
+    red:     '0xcc241d'
+    green:   '0x98971a'
+    yellow:  '0xd79921'
+    blue:    '0x458588'
+    magenta: '0xb16286'
+    cyan:    '0x689d6a'
+    white:   '0xa89984'
+
+  # Bright colors
+  bright:
+    black:   '0x928374'
+    red:     '0xfb4934'
+    green:   '0xb8bb26'
+    yellow:  '0xfabd2f'
+    blue:    '0x83a598'
+    magenta: '0xd3869b'
+    cyan:    '0x8ec07c'
+    white:   '0xebdbb2'
 
 cursor:
   shape: Block
