--- a/configs/alacritty.yml
+++ b/configs/alacritty.yml
@@ -13,7 +13,7 @@ font:
 
   normal:
     family: JetBrains Mono
-    style: Regular
+    style: SemiBold
 
   bold:
     family: JetBrains Mono
@@ -21,28 +21,56 @@ font:
 
   italic:
     family: JetBrains Mono
-    style: Italic
+    style: SemiBold Italic
 
-  size: 9.0
+  size: 10.0
 
+# KDE Breeze (Ported from Konsole)
 colors:
+  # Default colors
   primary:
-    background: '0x002b36'
-    foreground: '0x839496'
+    background: '0x232627'
+    foreground: '0xfcfcfc'
+
+    dim_foreground: '0xeff0f1'
+    bright_foreground: '0xffffff'
+    dim_background: '0x31363b'
+    bright_background: '0x000000'
+
+  # Normal colors
   normal:
-    black:   '0x073642'
-    red:     '0xdc322f'
-    green:   '0x859900'
-    yellow:  '0xb58900'
-    blue:    '0x268bd2'
-    magenta: '0xd33682'
-    cyan:    '0x2aa198'
-    white:   '0xeee8d5'
+    black: '0x232627'
+    red: '0xed1515'
+    green: '0x11d116'
+    yellow: '0xf67400'
+    blue: '0x1d99f3'
+    magenta: '0x9b59b6'
+    cyan: '0x1abc9c'
+    white: '0xfcfcfc'
+
+  # Bright colors
+  bright:
+    black: '0x7f8c8d'
+    red: '0xc0392b'
+    green: '0x1cdc9a'
+    yellow: '0xfdbc4b'
+    blue: '0x3daee9'
+    magenta: '0x8e44ad'
+    cyan: '0x16a085'
+    white: '0xffffff'
+
+  # Dim colors
+  dim:
+    black: '0x31363b'
+    red: '0x783228'
+    green: '0x17a262'
+    yellow: '0xb65619'
+    blue: '0x1b668f'
+    magenta: '0x614a73'
+    cyan: '0x186c60'
+    white: '0x63686d'
+
 cursor:
   shape: Block
   blinking: on
 
-shell:
-  program: /bin/zsh
-  args:
-    - --login
