--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -1,5 +1,5 @@
 {
-    "height": 30, // Waybar height (to be removed for auto height)
+    //"height": , // Waybar height (to be removed for auto height)
     "position": "bottom",
     "modules-left": ["sway/workspaces", "sway/mode"],
     "modules-center": ["sway/window"],
