--- a/configs/sway/config
+++ b/configs/sway/config
@@ -8,7 +8,7 @@ for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 p
 set $menu exec $term --class=launcher -e env zsh -c "source ~/.profile && /usr/bin/sway-launcher-desktop"
 set $filemgr pcmanfm-qt
 
-output * bg #002a35 solid_color
+output * bg #002b36 solid_color
 
 input * {
 	xkb_layout us,ru
@@ -18,6 +18,7 @@ input * {
 bar swaybar_command waybar
 xwayland enable
 
+smart_borders on
 default_border pixel 2
 gaps inner 5
 font "JetBrains Mono" 9
