--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -3,7 +3,7 @@
     "position": "bottom",
     "modules-left": ["sway/workspaces", "sway/mode"],
     "modules-center": ["sway/window"],
-    "modules-right": ["idle_inhibitor", "network", "cpu", "memory", "temperature", "battery", "sway/language", "clock", "tray"],
+    "modules-right": ["idle_inhibitor", "network", "pulseaudio", "cpu", "memory", "temperature", "battery", "sway/language", "clock", "tray"],
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
     },
@@ -23,6 +23,14 @@
         "format-alt": "{:%d.%m.%Y}",
         "interval": 1
     },
+    "pulseaudio": {
+        "scroll-step": 1,
+        "format": "Vol: {volume}%",
+        "format-bluetooth": "Vol: {volume}% ",
+        "format-bluetooth-muted": "Vol: {icon}",
+        "format-muted": "Vol: {volume}%",
+        "on-click": "pavucontrol"
+    },
     "cpu": {
         "format": "CPU: {usage}%",
         "interval": 1
@@ -33,6 +41,7 @@
     },
     "temperature": {
         "format": "{temperatureC}°C",
+        "interval": 1
     },
     "battery": {
         "format": "Bat: {capacity}%",
