--- a/configs/sway/config
+++ b/configs/sway/config
@@ -33,6 +33,7 @@ include ~/.config/sway/themes/solarized-dark
 # Start components
 
 exec mako
+exec poweralertd
 exec swayidle -w timeout 300 'swaylock -f -c 000000' timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' before-sleep 'swaylock -f -c 000000'
 
 # Screenshots
