--- a/configs/sway/config
+++ b/configs/sway/config
@@ -8,7 +8,7 @@ for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 p
 set $menu exec $term --class=launcher -e env zsh -c "source ~/.profile && /usr/bin/sway-launcher-desktop"
 set $filemgr nemo
 
-output * bg #073642 solid_color
+output * bg #1d2021 solid_color
 
 input * {
 	xkb_layout us,ru
@@ -22,12 +22,12 @@ smart_borders on
 default_border pixel 1
 hide_edge_borders smart
 smart_gaps on
-gaps inner 5
+gaps inner 16
 font "JetBrains Mono" 9
 
 output * scale 2
 
-include ~/.config/sway/themes/breeze
+include ~/.config/sway/themes/gruvbox
 
 # Start components
 
