--- a/configs/sway/config
+++ b/configs/sway/config
@@ -8,7 +8,7 @@ for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 p
 set $menu exec $term --class=launcher -e env zsh -c "source ~/.profile && /usr/bin/sway-launcher-desktop"
 set $filemgr nemo
 
-output * bg #073642 solid_color
+output * bg #1e2030 solid_color
 
 input * {
 	xkb_layout us,ru
@@ -23,18 +23,18 @@ smart_borders on
 default_border pixel 1
 hide_edge_borders smart
 smart_gaps on
-gaps inner 16
+gaps inner 8
 font "JetBrains Mono" 9
 
-output * scale 2
+output * scale 1.5
 
-include ~/.config/sway/themes/solarized-dark
+include ~/.config/sway/themes/catppuccin-macchiato
 
 # Start components
 
 exec mako
 exec poweralertd
-exec swayidle -w timeout 60 'swaylock -f -c 073642' timeout 70 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' before-sleep 'swaylock -f -c 073642'
+exec swayidle -w timeout 60 '$HOME/.config/sway/lock.sh'
 
 # Screenshots
 
@@ -135,13 +135,13 @@ bindsym XF86AudioPrev exec playerctl previous
 bindsym XF86Search exec $menu
 
 # Floating
-for_window [app_id="pavucontrol"] floating enable
-for_window [app_id="pavucontrol"] resize set 600 300
+for_window [app_id="pavucontrol"] floating enable, resize 600 300, move absolute position 25ppt 25ppt
+for_window [app_id="iwgtk"] floating enable, resize 300 150, move absolute position 25ppt 25ppt
 
 # Autostart
-
 exec alacritty --class bottom -e btm
 for_window [app_id="bottom"] move container to workspace number 10
 for_window [app_id="bottom"] fullscreen
-
+exec keepassxc
+for_window [class="KeePassXC"] move container to workspace 9
 
