--- a/configs/sway/config
+++ b/configs/sway/config
@@ -8,7 +8,7 @@ for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 p
 set $menu exec $term --class=launcher -e env zsh -c "source ~/.profile && /usr/bin/sway-launcher-desktop"
 set $filemgr nemo
 
-output * bg #1e2030 solid_color
+output * bg ~/.config/sway/magenta_blue.png fill
 
 input * {
 	xkb_layout us,ru
