--- a/configs/mako/config
+++ b/configs/mako/config
@@ -2,8 +2,8 @@ anchor=top-right
 default-timeout=10000
 width=300
 font=JetBrains Mono 8
-background-color=#002b36FF
-text-color=#839496FF
-border-color=#073642FF
+background-color=#24273AFF
+text-color=#CAD3F5
+border-color=#494D64FF
 height=500
 border-radius=10
