--- a/configs/sway/config
+++ b/configs/sway/config
@@ -8,7 +8,7 @@ for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 p
 set $menu exec $term --option window.opacity=1 --class=launcher -e env zsh -c "source ~/.profile && /usr/bin/sway-launcher-desktop"
 set $filemgr nemo
 
-output * bg ~/Pictures/bg/bg.png fill
+output * bg ~/Pictures/bg/makima.png fill
 
 input type:keyboard {
     xkb_layout us,ru
@@ -31,7 +31,7 @@ font "JetBrains Mono" 9
 
 output * scale 2
 
-include ~/.config/sway/themes/catppuccin-macchiato
+include ~/.config/sway/themes/makima
 
 # Start components
 
