Update configs on [nixos](https://github.com/ivabus/nix)
Signed-off-by: Ivan Bushchik <ivabus@ivabus.dev>

--- a/configs/qt5ct/qt5ct.conf
+++ b/configs/qt5ct/qt5ct.conf
@@ -3,7 +3,7 @@ color_scheme_path=/home/ivabus/.config/qt5ct/colors/Catppuccin-Macchiato.conf
 custom_palette=true
 icon_theme=Mint-Y-Dark
 standard_dialogs=default
-style=Lightly
+style=gtk2
 
 [Fonts]
 fixed=@Variant(\0\0\0@\0\0\0\x12\0N\0o\0t\0o\0 \0S\0\x61\0n\0s@(\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
@@ -28,7 +28,7 @@ wheel_scroll_lines=3
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0N\0\0\0\xc8\0\0\x2\xe3\0\0\x2\xd8\0\0\0N\0\0\0\xc8\0\0\x2\xe3\0\0\x2\xd8\0\0\0\0\0\0\0\0\x6\xaa\0\0\0N\0\0\0\xc8\0\0\x2\xe3\0\0\x2\xd8)
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\x46\0\0\x3\xef\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x3Y\0\0\0\0\x2\0\0\0\x6\xaa\0\0\0\0\0\0\0\0\0\0\x3\x46\0\0\x3\xef)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\am\0\0\x3\xf5\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x3Y\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\am\0\0\x3\xf5)
 
 [Troubleshooting]
 force_raster_widgets=1
