--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -1,9 +1,23 @@
 {
-    "height": 48,
+    "height": 32,
     "position": "top",
     "modules-left": ["sway/workspaces", "sway/mode"],
     "modules-center": [],
     "modules-right": ["tray", "idle_inhibitor", "cpu", "memory", "wireplumber", "battery", "sway/language", "clock"],
+    "sway/workspaces": {
+        "persistent_workspaces": {
+            "1": [],
+            "2": [],
+            "3": [],
+            "4": [],
+            "5": [],
+            "6": [],
+            "7": [],
+            "8": [],
+            "9": [],
+            "10": [],
+        }
+    },
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
     },
