Migrate from pactl to wpctl
Signed-off-by: Ivan Bushchik <ivabus@ivabus.dev>

--- a/configs/alacritty/alacritty.yml
+++ b/configs/alacritty/alacritty.yml
@@ -12,16 +12,16 @@ scrolling:
 
 font:
   normal:
-    family: JetBrains Mono
+    family: JetBrains Mono NL
     style: SemiBold
 
   bold:
-    family: JetBrains Mono
-    style: Bold
+    family: JetBrains Mono NL
+    style: ExtraBold
 
   italic:
-    family: JetBrains Mono
-    style: SemiBold Italic
+    family: JetBrains Mono NL
+    style: Italic
   size: 9.0
 
 cursor:
