--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -3,7 +3,7 @@
     "position": "top",
     "modules-left": ["sway/workspaces", "sway/mode"],
     "modules-center": [],
-    "modules-right": ["tray", "idle_inhibitor", "cpu", "memory", "wireplumber", "battery", "sway/language", "clock"],
+    "modules-right": ["tray", "idle_inhibitor", "cpu", "memory", "wireplumber", "network", "battery", "sway/language", "clock"],
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
     },
