--- a/configs/sway/config
+++ b/configs/sway/config
@@ -34,7 +34,7 @@ default_border pixel 1
 gaps inner 8
 font "JetBrains Mono" 9
 
-output * scale 2
+#output * scale 2
 
 include ~/.config/sway/themes/catppuccin-macchiato
 
@@ -129,9 +129,9 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Multimedia buttons
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +1%
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -1%
-bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%+
+bindsym XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
+bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
 bindsym XF86MonBrightnessDown exec brightnessctl set 2%-
 bindsym XF86MonBrightnessUp exec brightnessctl set 2%+
