--- a/configs/sway/config
+++ b/configs/sway/config
@@ -17,13 +17,15 @@ input type:keyboard {
 }
 
 input type:touchpad {
-    tap enabled
+    tap disabled
     dwt disabled
     natural_scroll enabled
 }
 
 input "1452:849:Apple_MTP_multi-touch" {
     scroll_factor 0.25
+    accel_profile adaptive
+    pointer_accel 0.1
 }
 
 exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
@@ -59,12 +61,12 @@ bindsym $mod+Shift+BackSpace exec killall -s SIGINT wf-recorder
 
 # Symbols bind
 bindsym $mod+Return exec $term
-bindsym $mod+Shift+f exec $filemgr
+bindsym $mod+Shift+e exec $filemgr
 bindsym $mod+Shift+q kill
 bindsym $mod+d exec $menu
 floating_modifier $mod normal
 bindsym $mod+Shift+c reload
-bindsym $mod+Shift+e exec swaynag -f 'JetBrains Mono 9' -e bottom -t warning -m "What would you like to do?" -B 'Exit sway' 'swaymsg exit' -B 'Power off' 'systemctl poweroff' -B 'Reboot' 'systemctl reboot' -B 'Lock screen' '$HOME/.config/sway/lock.sh'
+bindsym $mod+Shift+Escape exec swaynag -f 'JetBrains Mono 9' -e bottom -t warning -m "What would you like to do?" -B 'Exit sway' 'swaymsg exit' -B 'Power off' 'systemctl poweroff' -B 'Reboot' 'systemctl reboot' -B 'Lock screen' '$HOME/.config/sway/lock.sh'
 bindsym $mod+$left focus left
 bindsym $mod+$down focus down
 bindsym $mod+$up focus up
@@ -109,7 +111,7 @@ bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 bindsym $mod+f fullscreen
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+Shift+f floating toggle
 bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 bindsym $mod+Shift+minus move scratchpad
